--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ width: 80px; }
 #container {
 	display: flex; 
 	align-items: center;
-	justify-content: center; 
+	justify-content: center;
+	flex-direction: column;
 }
 
